--- a/src/Chocolate.css
+++ b/src/Chocolate.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   padding: 0;
   margin: 0;
-  background-color: #f7f1e1; /* Soft beige background, like milk chocolate */
+  background-color: #f7e1ed; /* Soft beige background, like milk chocolate */
   display: flex;
   justify-content: center;
 }
